@@ -9,6 +9,7 @@ import web.intro.mapper.BookMapper;
 import web.intro.model.Book;
 import web.intro.repository.BookRepository;
 
+import java.math.BigDecimal;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -21,7 +22,7 @@ public class BookService {
 	public List<BookDto> getAll() {
 		return bookRepository.findAll().stream()
 				.map(bookMapper::toDto)
-				.collect(Collectors.toList());
+				.toList();
 	}
 
 	public BookDto getBookById(Long id) {
@@ -34,11 +35,18 @@ public class BookService {
 		return bookMapper.toDto(bookRepository.save(book));
 	}
 
-	public void deleteBook(long id) {
-		Book book = bookRepository.findById(id)
-						.orElseThrow(()-> new EntityNotFoundException("Book by id not found"));
-        book.setDeleted(true);
-		bookRepository.save(book);
+	public BookDto updateBook(Long id, CreateBookRequestDto bookDto) {
+		Book curentBook =bookRepository.findById(id)
+				.orElseThrow(() -> new EntityNotFoundException("Book by id not found"));
+		curentBook.setTitle(bookDto.getTitle());
+		curentBook.setAuthor(bookDto.getAuthor());
+		curentBook.setPrice(BigDecimal.valueOf(bookDto.getPrice()));
+
+		curentBook = bookRepository.save(curentBook);
+		return bookMapper.toDto(curentBook);
+	}
+
+	public void deleteById(long id) {
 		bookRepository.deleteById(id);
 	}
 }
